# ReBugTracker

./: .dockerignore  .env.example  .env.template  .gitignore  .uvignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_ENHANCED.md  DEPLOYMENT_GUIDE_WINDOWS_POSTGRES.md  DEPLOYMENT_OPTIONS.md  Dockerfile  NOTIFICATION_SYSTEM_SUMMARY.md  OPTIMIZATION_IMPLEMENTATION_REPORT.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  README_DEPLOYMENT.md  SQLITE_STATUS_REPORT.md  TOOLS_README.md  UV_GUIDE.md  WINDOWS_SERVICE_GUIDE.md  WORKFLOW_ROLES.md  app.py  app_config_exe.py  background_explanation.md  bugtracker.db  build_exe.py  check_bug_status.py  compare_db_structures.py  config.py  config_adapter.py  create_db_temp.py  create_offline_package.py  db_factory.py  debug_data.py  debug_login.py  deploy.bat  deploy.py  deploy.sh  deploy.txt  (+44 more)
.augment/rules/: 编码规则.md
cross_platform_build/: README.md  build_linux.py  build_macos.py  build_universal.py
cross_platform_build/configs/: app_config_unix.py  rebugtracker_macos.spec
cross_platform_build/macos/: INTEGRATION_SUMMARY.md  README.md  app_config_macos.py  build_macos_fixed.py  crypto_compat_macos.py  fix_admin_macos.py  hook-hashlib_macos.py  rebugtracker_macos.py  rebugtracker_macos.spec  test_macos_build.py
cross_platform_build/templates/: install.sh  start_rebugtracker.sh
cross_platform_build/windows/: MIGRATION_SUMMARY.md  README.md  README_EXE.md  app_config_exe.py  build_exe.py  build_windows.py  deploy.bat  rebugtracker.spec  rebugtracker_exe.py  start_rebugtracker.bat  start_rebugtracker_example.vbs  windows_vbs部署bat.txt  故障排除指南.md  配置说明.md
database_migration_tools/: README.md  check_db_constraints.py  full_sync_postgres_to_sqlite.py  inspect_postgres.py  sync_postgres_data_to_sqlite.py  sync_postgres_schema_to_sqlite.py  sync_sqlite_to_postgres_data.py  test_db_connection_new.py
database_tools/: README.md  TOOL_GUIDE.md  add_bug_type_field.py  check_sqlite_data.py  clean_timestamp_precision.py  compare_users_table.py  comprehensive_db_check.py  create_notification_tables.py  create_notification_tables_sqlite.py  fix_admin_data.py  quick_start.bat  show_table_structure.py  sqlite_config_checker.py  sqlite_optimizer.py  test_admin_access.py  test_admin_user_management.py  test_bug_detail_assign.py  test_bug_detail_navigation.py  test_db_connection.py  test_fzr_assign_function.py  test_sqlite_login.py  test_ssz_functions.py  tool_index.py
database_tools/archive/: add_gotify_user_token.py  add_user_contact_fields.py  create_db_temp.py  update_system_config_descriptions.py
database_tools/check_tools/: database_structure_validator.py  (+5 more)
deployment_tools/: README.md  install_windows_service.bat  install_windows_service.txt  manage_windows_service.bat  manage_windows_service.txt  rbt快捷启动.txt  run_waitress.py  start_service.bat  start_service.txt  uninstall_windows_service.bat  uninstall_windows_service.txt  windows_service_config.md
docs/: bug_status_workflow_guide.md  notification_priority_system_guide.md  系统架构.md  系统设计说明书.md
notification/: __init__.py  cleanup_manager.py  flow_rules.py  notification_manager.py  simple_notifier.py
postgres_to_sqlite/: README.md  create_db_temp.py  fix_migration_data.py  migrate_to_sqlite.py  test_db_connection.py  verify_migration.py
sqlite_to_postgres/: README.md  check_db_constraints.py  create_db_temp.py  migrate_to_postgres.py  test_db_connection.py
sqlite_to_postgres(改造的文件)/: check_db_constraints.py  migrate_to_postgres.py
templates/: admin.html  assign.html  base.html  bug_detail.html  confirm_receive.html  index.html  login.html  notifications.html  product_manager.html  register.html  resolve.html  submit.html  team_issues.html  user_settings.html  welcome.html
templates713备份/: 403.html  500.html  assign.html  notifications.html  resolve.html
templates备份/: 404.html  admin.html  base.html  bug_detail.html  index.html  login.html  register.html  submit.html  team_issues.html  user_settings.html
test/: README.md  check_background_consistency.py  diagnose_submit_page.py  test_admin_visual_check.py  test_beautiful_registration.py  test_global_notification_switches.py  test_gotify_notification_real.py  test_inapp_notification_real.py  test_inapp_notification_ui.py  test_index_optimization.py  test_navbar_removal.py  test_resolve_page_redesign.py  test_simple_check.py  test_status_filter.py  test_submit_page_redesign.py  verify_admin_changes.py  verify_transparent_background.py
(+44 files in other folders)
